--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             </td>
             <td>
-               <h1>Geng Sun (<a href="http://ccst.jlu.edu.cn">孙庚</a>)</h1>
+               <h1>Geng Sun (<a href="https://sungeng207.github.io/">孙庚</a>)</h1>
                <h2>Ph.D.,&nbsp;&nbsp;Associate Professor</h2>
                <h3><a href="http://ccst.jlu.edu.cn">College of Computer Science and Technology, Jilin University</a></h3>
                 <!-- 		&nbsp;&nbsp;&nbsp;Tel: +86 519-885-1211 Ext. 31778 <br> -->
