--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
     <hr>
 	       
     <h3>Research Grants: </h3>
+	       
     <li> PI, National Natural Science Foundation of China, "Research on Swarm Intelligence Method for Collaborative and Secure Communication in UAV Networks (62272194)", 2023-01 to 2026-12, 530,000 CNY.</li>
     <li> PI, National Natural Science Foundation of China Young Science Foundation Program, "Research on Evolutionary Multi-objective Optimization Methods for Distributed Collaborative Beamforming in UAV Networks (62002133)", 2021-01 to 2023-12, 240,000 CNY.</li>
     <li> PI, Postdoctoral Innovative Talent Support Program, "Multi-objective Optimization Research on Distributed Mobile Collaborative Beamforming (BX2018128)", 2018-06 to 2020-06, 600,000 CNY.</li>
@@ -333,7 +334,7 @@
     -IEEE Signal Processing Letters<br>
     <hr>
 
-    <h3>Research Group</h3>
+    <h3>Research Group:</h3>
     <ul>
         <li><b><font size="" color="blue">Postdocs: </font></b><br>Zemin Sun </li>
         <li><b><font size="" color="blue">PhD Students: </font></b><br>Jiahui Li, Chuang Zhang, Saichao Liu, Long He.</li>
@@ -350,7 +351,7 @@
     (3) Recruitment of Postdoctoral Fellows. <br>
     <hr>
 
-    <em>Last Updated: 2023-7-23</em><br>
+    <em>Last Updated: 2023-8-29</em><br>
 
     <hr>
 
