--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
             </td>
             <td>
-               <h1>Geng Sun (<a href="https://sungeng207.github.io/">孙庚</a>)</h1>
-               <h2>Ph.D.,&nbsp;&nbsp;Associate Professor</h2>
+               <h1>Geng Sun (孙庚)</h1>
+               <h3>Ph.D.,&nbsp;&nbsp;Associate Professor</h3>
                <h3><a href="http://ccst.jlu.edu.cn">College of Computer Science and Technology, Jilin University</a></h3>
                 <!-- 		&nbsp;&nbsp;&nbsp;Tel: +86 519-885-1211 Ext. 31778 <br> -->
                 <h3>E-mail: sungeng@jlu.edu.cn</h3>
+                <h2> <a href="https://scholar.google.com/citations?user=ewQJtlEAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> &nbsp;&nbsp; <a href="https://www.researchgate.net/profile/Geng_Sun4">Researchgate</a> &nbsp;&nbsp; <a href="http://ccst.jlu.edu.cn/info/1313/17037.htm">JLU Homepage</a> &nbsp;&nbsp; <a href="https://sungeng207.github.io/">Chinese Homepage</a> </h2>
             </td>
         </tr>
 
