--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
             </td>
             <td>
-               <h1>Geng Sun (孙庚)</h1>
-               <h3>Ph.D.,&nbsp;&nbsp;Associate Professor</h3>
+               <h1>Geng Sun (孙庚), &nbsp;&nbsp;Ph.D.,&nbsp;&nbsp;Associate Professor</h1>
                <h3><a href="http://ccst.jlu.edu.cn">College of Computer Science and Technology, Jilin University</a></h3>
                 <!-- 		&nbsp;&nbsp;&nbsp;Tel: +86 519-885-1211 Ext. 31778 <br> -->
                 <h3>E-mail: sungeng@jlu.edu.cn</h3>
